--- a/weather-react/src/index.css
+++ b/weather-react/src/index.css
@@ -143,6 +143,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(35, 75, 150);
 }
 
 code {
